# cuda_parallel_programming

./: CMakeLists.txt  README.md
doc/chapter/: chapter1.md
src/: device_info.cu  main.cu
